Scrollbars from jpcode. Fix small visual bugs... Fix transition on widget sidebar arrow only applying half the time. Fix spacing in help tooltip. Add `.tooltip.right`

--- a/css/components/_tooltip-sm.scss
+++ b/css/components/_tooltip-sm.scss
@@ -16,3 +16,8 @@
     border:1px black solid;
     box-shadow:0 0 3px #ccc;
 }
+.tooltip.right:after {
+    left: 100%;
+    transform: none;
+    width: auto;
+}
