--- a/css/core_style.css
+++ b/css/core_style.css
@@ -157,6 +157,35 @@ header .end .dropdown .push_button:active {
   box-shadow: 0 0 3px #ccc;
 }
 
+.tooltip.right:after {
+  left: 100%;
+  transform: none;
+  width: auto;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--color-base-2);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-element-1);
+  border: 0.25rem solid var(--color-base-2);
+  border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar {
+  width: 1rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-accent-1);
+}
+
+* {
+  scrollbar-width: initial;
+  scrollbar-color: var(--color-base-1) var(--color-base-2);
+}
+
 :root {
   background-color: var(--color-background);
 }
