--- a/css/map_style.css
+++ b/css/map_style.css
@@ -535,6 +535,9 @@ input.searchField::placeholder {
   flex-direction: row;
   align-items: center;
 }
+#w_sidebar_showhide .material-icons {
+  transition: transform 0.25s;
+}
 
 #widget_sidebar.hidden + #w_sidebar_showhide {
   left: 0;
@@ -542,7 +545,6 @@ input.searchField::placeholder {
 
 #widget_sidebar.hidden + #w_sidebar_showhide > .material-icons {
   transform: rotate(180deg);
-  transition: transform 0.25s;
 }
 
 #w_sidebar_showhide:hover {
